@startuml
skinparam classAttributeIconSize 0
hide circle

note "Private methods are omitted.\nexecute() parameters omitted for brevity." as N1

abstract class "{abstract}\nCommand" as Command {
    {abstract} +execute()
}

enum RecordType <<enumeration>> {
    EXPENSE
    LOAN
    SAVING
    ALL
}

class ListCommand {
    {static} #COMMAND_LIST: String
    -recordType: RecordType
    +ListCommand(:ArrayList<String>)
    +execute()
}

class RemoveCommand {
    {static} #COMMAND_REMOVE: String
    -recordNumberStr: String
    -recordNumberInt: int
    +RemoveCommand(:ArrayList<String>, :RecordList)
    +execute()
}

class ReturnCommand {
    {static} #COMMAND_RETURN: String
    -recordNumberStr: String
    -recordNumberInt: int
    -returnDate: LocalDate
    +ReturnCommand(:ArrayList<String>, :RecordList)
    +execute()
}

class ViewCommand {
    {static} #COMMAND_VIEW: String
    -recordType: RecordType
    +ViewCommand(:ArrayList<String>)
    +execute()
}

skinparam linetype polyline
skinparam groupInheritance 3

Command <|-- ListCommand
Command <|-- RemoveCommand
Command <|-- ReturnCommand
Command <|-- ViewCommand

hide RecordType empty members

@enduml